[package]
name = "day_09"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
utils = { path = "../utils" }
log = "0.4.6"
env_logger = "0.9.0"
itertools = "0.10.0"
im-rc = "15.0.0"
tailcall = "0.1.6"
ansi_term = "0.12.1"